# BrainQuake

./: .gitignore  CLAUDE.md  PHASE_E_PLAN.md  PLAN.md
BrainQuake/: client_elec.py  client_ictal.py  client_inter.py  client_main.py  client_soz.py  client_surf.py  config.json  mayaviplot.py  soz_result.py
BrainQuake/Server_codes/: combine.py  eePipeline.py  server.py  task_utils.py  utils.py  utils_scs.py
BrainQuake/gui_forms/: ictal_form.py
BrainQuake/utils/: HI_apis.py  elec_utils.py  surfer_utils.py
v2/: .dockerignore
v2/client/: anat_lookup.py  api_client.py  app_state.py  client_elec.py  client_ictal.py  client_inter.py  client_main.py  client_soz.py  client_surf.py  config.json  connection_monitor.py  (+7 more)
v2/server/: pyproject.toml  requirements.txt
v2/server/alembic/: env.py
v2/server/alembic/versions/: c3327ba04b14_initial_schema.py
v2/server/app/: __init__.py  config.py  db.py  main.py
v2/server/app/models/: __init__.py  artifact.py  job.py  subject.py
v2/server/app/routers/: __init__.py  artifacts.py  edf.py  electrodes.py  ictal.py  interictal.py  jobs.py  patient_io.py  recon.py  soz.py  subjects.py  surface.py
v2/server/app/schemas/: __init__.py  artifact.py  job.py  subject.py
v2/server/app/services/: __init__.py  ct_register.py  edf.py  edf_common.py  electrodes.py  ictal.py  interictal.py  job_control.py  patient_io.py  recon.py  signal_filters.py  soz.py  surface.py
v2/server/app/workers/: __init__.py  jobs_worker.py
v2/server/data/: brainquake.db  brainquake.db-shm  brainquake.db-wal
v2/server/tests/: conftest.py  test_api.py
(+70 files in other folders)
